# blackroad-workflow-builder

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
src/: workflow_builder.py
tests/: test_e2e.py  test_workflow_builder.py
